sidebar hanburguer icon

--- a/index.html
+++ b/index.html
@@ -26,17 +26,49 @@
     <title>Portfólio</title>
   </head>
   <body>
+
     <div class="container">
+      <div class="hanburguer">
+        <div class="line" id="line1"></div>
+        <div class="line" id="line2"></div>
+        <div class="line" id="line3"></div>
+      </div>
+
       <header>
         <div class="img-wrapper">
           <img src="./imagens/bg.jpg" alt="back-ground-img" />
         </div>
+
         <div class="banner">
           <h1>Web Developer & Front End Designer</h1>
           <p>Nilton Escame</p>
           <button>Saiba mais</button>
         </div>
       </header>
+
+      <div class="sidebar">
+        <nav>
+          <ul class="menu">
+            <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Conhecimento</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Projetos</a>
+            </li>
+            <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Orçamento</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="social-midia">
+          <a href="#"><i class="fab fa-facebook-f"></i>
+          <a href="#"><i class="fab fa-git-square"></i>
+          <a href="#"><i class="fab fa-twitter-square"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
