--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
   <body>
 
     <div class="container">
-      <div class="hanburguer">
+      <div class="hamburguer">
         <div class="line" id="line1"></div>
         <div class="line" id="line2"></div>
         <div class="line" id="line3"></div>
+        <span>Fechar</span>
       </div>
 
       <header>
@@ -71,4 +72,5 @@
       </div>
     </div>
   </body>
+  <script src="./script.js"></script>
 </html>
