:package: section projetos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </header>
 
-      <div class="sidebar">
+      <aside class="sidebar">
         <nav>
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -69,7 +69,123 @@
           <a href="#"><i class="fab fa-git-square"></i>
           <a href="#"><i class="fab fa-twitter-square"></i>
         </div>
-      </div>
+      </aside>
+
+      <section class="sessao-conhecimentos">
+        <div class="sessao-header">
+          <h1>Conhecimentos</h1>
+        </div>
+        <div class="conhecimentos">
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-html5"></i>
+              <h3>HTML</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-css3-alt"></i>
+              <h3>CSS3</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fas fa-pencil-alt"></i>
+              <h3>Design</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-js-square"></i>
+              <h3>Javascript</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-bootstrap"></i>
+              <h3>Bootstrap</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-github-alt"></i>
+              <h3>Git e GitHub</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento-img-wrapper">
+            <img src="./imagens/PngItem.png" alt="img-conhecimento">
+          </div>
+
+        </div>
+      </section>
+
+      <section class='sessao-projetos'>
+        <div class="sessao-header">
+          <h1>Projetos</h1>
+        </div>
+        <div class="projetos">
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="https://www.teahub.io/photos/full/2-29565_nature-wallpaper-hd-for-tablet-photography-of-download.jpg" alt="">
+            </div>
+            <div class="card-info">
+              <h2>projeto 1</h2>
+              <h3>lig 4</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
+              <button>Saiba Mais</button>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="https://www.teahub.io/photos/full/2-29565_nature-wallpaper-hd-for-tablet-photography-of-download.jpg" alt="">
+            </div>
+            <div class="card-info">
+              <h2>projeto 2</h2>
+              <h3> NGHeroes</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
+              <button>Saiba Mais</button>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="https://www.teahub.io/photos/full/2-29565_nature-wallpaper-hd-for-tablet-photography-of-download.jpg" alt="">
+            </div>
+            <div class="card-info">
+              <h2>projeto 4</h2>
+              <h3>So fit</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
+              <button>Saiba Mais</button>
+            </div>
+          </div>
+
+        </div>
+      </section>
     </div>
   </body>
   <script src="./script.js"></script>
