:package: form email

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="banner">
           <h1>Web Developer & Front End Designer</h1>
           <p>Nilton Escame</p>
-          <button>Saiba mais</button>
+          <button class="btn">Saiba mais</button>
         </div>
       </header>
 
@@ -66,8 +66,8 @@
 
         <div class="social-midia">
           <a href="#"><i class="fab fa-facebook-f"></i>
-          <a href="#"><i class="fab fa-git-square"></i>
-          <a href="#"><i class="fab fa-twitter-square"></i>
+          <a target="_blank" href="https://github.com/nfescame"><i class="fab fa-git-square"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/nilton-escame/"><i class="fab fa-linkedin"></i></a>
         </div>
       </aside>
 
@@ -136,6 +136,46 @@
             </div>
           </div>
 
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-react"></i>
+              <h3>React js</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-node"></i>
+              <h3>Node</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-npm"></i>
+              <h3>NPM</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fab fa-github-alt"></i>
+              <h3>Git e GitHub</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+            </div>
+          </div>
+
           <div class="conhecimento-img-wrapper">
             <img src="./imagens/PngItem.png" alt="img-conhecimento">
           </div>
@@ -156,7 +196,7 @@
               <h2>projeto 1</h2>
               <h3>lig 4</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
-              <button>Saiba Mais</button>
+              <button class="btn">Saiba Mais</button>
             </div>
           </div>
 
@@ -168,7 +208,7 @@
               <h2>projeto 2</h2>
               <h3> NGHeroes</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
-              <button>Saiba Mais</button>
+              <button class="btn">Saiba Mais</button>
             </div>
           </div>
 
@@ -180,10 +220,33 @@
               <h2>projeto 4</h2>
               <h3>So fit</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
-              <button>Saiba Mais</button>
+              <button class="btn">Saiba Mais</button>
             </div>
           </div>
+        </div>
+      </section>
 
+      <section class="sessao-contato">
+        <div class="contato-wrapper">
+          <div class="contato-left"></div>
+          <div class="contato-rigth">
+            <h1>Contato</h1>
+            <form action="">
+              <div class="input-group">
+                <input type="text" class="field" id='name'>
+                <label class='field-label' for="name">Nome</label>
+              </div>
+              <div class="input-group">
+                <input type="text" class="field" id='email'>
+                <label class='field-label' for="email">Email</label>
+              </div>
+               <div class="input-group">
+                <textarea class='field' id='mensagem'></textarea>
+                <label class='field-label' for="mensagem">Mensagem</label>
+              </div>
+              <button class='btn-submit btn' type='submit'>Enviar</button>
+            </form>
+          </div>
         </div>
       </section>
     </div>
