--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <span>Fechar</span>
       </div>
 
-      <header>
+      <header id='home'>
         <div class="img-wrapper">
           <img src="./imagens/bg2.jpg" alt="back-ground-img" />
         </div>
@@ -52,14 +52,14 @@
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Conhecimento</a>
+              <a href="#conhecimentos" class="menu-link">Conhecimento</a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Projetos</a>
+              <a href="#projetos" class="menu-link">Projetos</a>
             </li>
-            <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+            <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Orçamento</a>
+              <a href="#orcamento" class="menu-link">Orçamento</a>
             </li>
           </ul>
         </nav>
@@ -71,7 +71,7 @@
         </div>
       </aside>
 
-      <section class="sessao-conhecimentos">
+      <section class="sessao-conhecimentos" id='conhecimentos'>
         <div class="sessao-header">
           <h1>Conhecimentos</h1>
         </div>
@@ -183,7 +183,7 @@
         </div>
       </section>
 
-      <section class='sessao-projetos'>
+      <section class='sessao-projetos' id='projetos'>
         <div class="sessao-header">
           <h1>Projetos</h1>
         </div>
@@ -226,7 +226,7 @@
         </div>
       </section>
       
-      <section class="sessao-contato">
+      <section class="sessao-contato" id='contato'>
         <div class="contato-wrapper">
           <div class="contato-left">
             Photo by <a href="https://unsplash.com/@altumcode?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">AltumCode</a> on <a href="https://unsplash.com/s/photos/developer?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
@@ -252,12 +252,13 @@
         </div>
       </section>
 
-      <section class="sessao-orcamento">
+      <section class="sessao-orcamento" id='orcamento'>
         <div class="orcamento-wrapper">
           <h1>Faça um orçamento</h1>
           <form >
             <label for="qtde">Qtde de paginas</label>
             <input type="number" name='qtde' id='qtde' min='1' max='99'>
+
             <label for="js">Preciso de um script JS</label>
             <input type="checkbox" name='js' id='js'>
             <label>Layout</label>
@@ -273,12 +274,33 @@
               </div>
 
             </div>
-            <label for="prazo">Prazo</label>
-            <input type="range" name="prazo" id="prazo">
+            <label for="prazo">Prazo: 1 semanas</label>
+            <input type="range" name="prazo" id="prazo" min='1' max='10' value="1">
+            <label id='preco'>R$ 0.00</label>
             <button class="btn btn-orcamento" type="submit">Enviar</button>
           </form>
         </div>
       </section>
+
+      <footer>
+        <div class="footer-content">
+          <p>
+            Copyright &copy; 2021 NILTON-ESCAME - Todos os direitos reservados
+          </p>
+
+          <div class="social-list">
+            <ul>
+              <li><a href=''><i class="fab fa-facebook"></i></a></li>
+              <li><a href=''><i class="fab fa-instagram"></i></a></li>
+              <li><a href=''><i class="fab fa-twitter"></i></a></li>
+            </ul>
+          </div>
+
+        </div>
+      </footer>
+      <a href="#home" id='link-top'>
+        <i class='fas fa-arrow-up'></i>
+      </a>
     </div>
   </body>
   <script src="./script.js"></script>
