:bug:correçao sidebar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <header id='home'>
         <div class="img-wrapper">
-          <img src="./imagens/bg2.jpg" alt="back-ground-img" />
+          <img src="./imagens/bg.jpg" alt="back-ground-img" />
         </div>
 
         <div class="banner">
@@ -50,7 +50,7 @@
       <aside class="sidebar">
         <nav>
           <ul class="menu">
-            <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+            <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
             <li class="menu-item">
               <a href="#conhecimentos" class="menu-link">Conhecimento</a>
             </li>
@@ -82,7 +82,7 @@
               <h3>HTML</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+              <p>HTML é uma das linguagens que utilizamos para desenvolver websites. O acrônimo HTML vem do inglês e significa Hypertext Markup Language ou em português Linguagem de Marcação de Hipertexto. O HTML é a liguagem base da internet.</p>
             </div>
           </div>
 
@@ -92,17 +92,7 @@
               <h3>CSS3</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
-            </div>
-          </div>
-
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fas fa-pencil-alt"></i>
-              <h3>Design</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+              <p>CSS é chamado de linguagem Cascading Style Sheet e é usado para estilizar elementos escritos em uma linguagem de marcação como HTML. O CSS separa o conteúdo da representação visual do site. </p>
             </div>
           </div>
 
@@ -112,7 +102,7 @@
               <h3>Javascript</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+              <p>JavaScript é uma linguagem de programação que permite a você implementar itens complexos em páginas web</p>
             </div>
           </div>
 
@@ -122,7 +112,7 @@
               <h3>Bootstrap</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+              <p>Bootstrap é um framework front-end que fornece estruturas de CSS para a criação de sites e aplicações responsivas de forma rápida e simples. Além disso, pode lidar com sites de desktop e páginas de dispositivos móveis da mesma forma.</p>
             </div>
           </div>
 
@@ -160,16 +150,6 @@
             <div class="conhecimento-header">
               <i class="fab fa-npm"></i>
               <h3>NPM</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
-            </div>
-          </div>
-
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-github-alt"></i>
-              <h3>Git e GitHub</h3>
             </div>
             <div class="conhecimento-text">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
