--- a/index.html
+++ b/index.html
@@ -136,26 +136,6 @@
             </div>
           </div>
 
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-node"></i>
-              <h3>Node</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
-            </div>
-          </div>
-
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-npm"></i>
-              <h3>NPM</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
-            </div>
-          </div>
-
           <div class="conhecimento-img-wrapper">
             <img src="./imagens/PngItem.png" alt="img-conhecimento">
           </div>
@@ -175,7 +155,7 @@
             <div class="card-info">
               <h2>projeto 1</h2>
               <h3>lig 4</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
+              <p>Lorem ipsum dolor sit amet consectetur,</p>
               <button class="btn">Saiba Mais</button>
             </div>
           </div>
@@ -187,7 +167,7 @@
             <div class="card-info">
               <h2>projeto 2</h2>
               <h3> NGHeroes</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
+              <p>Lorem ipsum dolor sit amet consectetur,</p>
               <button class="btn">Saiba Mais</button>
             </div>
           </div>
@@ -199,7 +179,7 @@
             <div class="card-info">
               <h2>projeto 4</h2>
               <h3>So fit</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident minima beatae possimus, incidunt obcaecati itaque aliquam deleniti enim repudiandae commodi? Quidem totam voluptatum eos sed pariatur eveniet molestiae? Labore, est.</p>
+              <p>Lorem ipsum dolor sit amet consectetur,</p>
               <button class="btn">Saiba Mais</button>
             </div>
           </div>
