--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="banner">
-          <h1>Web Developer & Front End Designer</h1>
+          <h1>Web Developer Fullstack Designer</h1>
           <p>Nilton Escame</p>
           <button class="btn">Saiba mais</button>
         </div>
@@ -58,9 +58,9 @@
               <a href="#projetos" class="menu-link">Projetos</a>
             </li>
             <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
-            <li class="menu-item">
+            <!-- <li class="menu-item">
               <a href="#orcamento" class="menu-link">Orçamento</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
 
@@ -212,7 +212,7 @@
         </div>
       </section>
 
-      <section class="sessao-orcamento" id='orcamento'>
+      <!-- <section class="sessao-orcamento" id='orcamento'>
         <div class="orcamento-wrapper">
           <h1>Faça um orçamento</h1>
           <form >
@@ -240,7 +240,7 @@
             <button class="btn btn-orcamento" type="submit">Enviar</button>
           </form>
         </div>
-      </section>
+      </section> -->
 
       <footer>
         <div class="footer-content">
