:up: ajuste de imagens Projetos

--- a/index.html
+++ b/index.html
@@ -150,36 +150,37 @@
         <div class="projetos">
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="https://www.teahub.io/photos/full/2-29565_nature-wallpaper-hd-for-tablet-photography-of-download.jpg" alt="">
+              <img src="imagens/lig4Logo.png" alt="">
             </div>
             <div class="card-info">
-              <h2>projeto 1</h2>
-              <h3>lig 4</h3>
-              <p>Lorem ipsum dolor sit amet consectetur,</p>
+              <h2>Lig4</h2>
+              <h3>Project #1 Game</h3>
+              <p>Neste game eu apliquei o conhecimento adquirido nas primeiras semanas de desenvolvimento web bootcamp do ironhack.
+              </p>
               <button class="btn">Saiba Mais</button>
             </div>
           </div>
 
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="https://www.teahub.io/photos/full/2-29565_nature-wallpaper-hd-for-tablet-photography-of-download.jpg" alt="">
+              <img src="imagens/heroes.jpg" alt="">
             </div>
             <div class="card-info">
-              <h2>projeto 2</h2>
-              <h3> NGHeroes</h3>
-              <p>Lorem ipsum dolor sit amet consectetur,</p>
+              <h2>NGHeroes</h2>
+              <h3>Project #2 Crud-Pair programming-Guilherme Rosa</h3>
+              <p>Este projeto é um sistema CRUD de recriação. Existe uma API com mais de 700 nomes e dados de heróis e com estes dados o usuário pode escolher seus 5 personagens favoritos, irá criar uma lista deles, definir um nome para o "esquadrão" e inserir seu próprio nome.</p>
               <button class="btn">Saiba Mais</button>
             </div>
           </div>
 
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="https://www.teahub.io/photos/full/2-29565_nature-wallpaper-hd-for-tablet-photography-of-download.jpg" alt="">
+              <img src="imagens/fitness.jpeg" alt="">
             </div>
             <div class="card-info">
-              <h2>projeto 4</h2>
-              <h3>So fit</h3>
-              <p>Lorem ipsum dolor sit amet consectetur,</p>
+              <h2>So fit</h2>
+              <h3>Project #3 API-Pair programming-Manoel Pereira e Raul Guimarães</h3>
+              <p>Este aplicativo da web tem como objetivo ajudar as pessoas a transformar sua vida de fitness em uma atividade mais agradável / emocionante</p>
               <button class="btn">Saiba Mais</button>
             </div>
           </div>
