:bug:rota dos projetos

--- a/index.html
+++ b/index.html
@@ -58,14 +58,12 @@
               <a href="#projetos" class="menu-link">Projetos</a>
             </li>
             <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
-            <!-- <li class="menu-item">
-              <a href="#orcamento" class="menu-link">Orçamento</a>
-            </li> -->
+      
           </ul>
         </nav>
 
         <div class="social-midia">
-          <a href="#"><i class="fab fa-facebook-f"></i>
+          <a target="_blank" href="https://profiles.ironhack.com/nilton-escame"><i class="fas fa-graduation-cap"></i>
           <a target="_blank" href="https://github.com/nfescame"><i class="fab fa-git-square"></i></a>
           <a target="_blank" href="https://www.linkedin.com/in/nilton-escame/"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -102,7 +100,7 @@
               <h3>Javascript</h3>
             </div>
             <div class="conhecimento-text">
-              <p>JavaScript é uma linguagem de programação que permite a você implementar itens complexos em páginas web</p>
+              <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web.</p>
             </div>
           </div>
 
@@ -122,7 +120,7 @@
               <h3>Git e GitHub</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+              <p>plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. Ele permite que programadores, utilitários ou qualquer usuário cadastrado na plataforma contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo.</p>
             </div>
           </div>
 
@@ -132,7 +130,7 @@
               <h3>React js</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis perspiciatis nostrum accusamus doloribus dolorem eius nisi quam natus adipisci. Vero, praesentium vel est vitae commodi fuga quam possimus quos a?</p>
+              <p>O React é uma biblioteca JavaScript de código aberto com foco em criar interfaces de usuário em páginas web. É mantido pelo Facebook, Instagram, outras empresas e uma comunidade de desenvolvedores individuais. É utilizado nos sites da Netflix, Imgur, Feedly, Airbnb, SeatGeek, HelloSign, Walmart e outros.</p>
             </div>
           </div>
 
@@ -157,7 +155,7 @@
               <h3>Project #1 Game</h3>
               <p>Neste game eu apliquei o conhecimento adquirido nas primeiras semanas de desenvolvimento web bootcamp do ironhack.
               </p>
-              <button class="btn">Saiba Mais</button>
+              <a target='_blank' href='https://nfescame.github.io/Lig4-Game/'><button class="btn">Visitar</button></a>
             </div>
           </div>
 
@@ -168,8 +166,8 @@
             <div class="card-info">
               <h2>NGHeroes</h2>
               <h3>Project #2 Crud-Pair programming-Guilherme Rosa</h3>
-              <p>Este projeto é um sistema CRUD de recriação. Existe uma API com mais de 700 nomes e dados de heróis e com estes dados o usuário pode escolher seus 5 personagens favoritos, irá criar uma lista deles, definir um nome para o "esquadrão" e inserir seu próprio nome.</p>
-              <button class="btn">Saiba Mais</button>
+              <p>Este projeto é um sistema CRUD de recriação. Existe uma API com mais de 700 nomes e dados de heróis e com estes dados o usuário pode escolher seus 5 personagens favoritos.</p>
+              <a target='_blank'  href='https://ngheroes.netlify.app/'><button class="btn">Visitar</button></a>
             </div>
           </div>
 
@@ -181,7 +179,7 @@
               <h2>So fit</h2>
               <h3>Project #3 API-Pair programming-Manoel Pereira e Raul Guimarães</h3>
               <p>Este aplicativo da web tem como objetivo ajudar as pessoas a transformar sua vida de fitness em uma atividade mais agradável / emocionante</p>
-              <button class="btn">Saiba Mais</button>
+              <a target='_blank' href='https://so-fit-app.netlify.app/'><button class="btn">Visitar</button></a>
             </div>
           </div>
         </div>
@@ -213,49 +211,11 @@
         </div>
       </section>
 
-      <!-- <section class="sessao-orcamento" id='orcamento'>
-        <div class="orcamento-wrapper">
-          <h1>Faça um orçamento</h1>
-          <form >
-            <label for="qtde">Qtde de paginas</label>
-            <input type="number" name='qtde' id='qtde' min='1' max='99'>
-
-            <label for="js">Preciso de um script JS</label>
-            <input type="checkbox" name='js' id='js'>
-            <label>Layout</label>
-            <div class="group-layout">
-              <div>
-                <input type="radio" name="layout" id="layout-sim">
-                <label for="layout-sim">Preciso de um layout</label>
-              </div>
-
-              <div>
-                <input type="radio" name="layout" id="layout-nao">
-                <label for="layout-nao">Jã tenho um layout</label>
-              </div>
-
-            </div>
-            <label for="prazo">Prazo: 1 semanas</label>
-            <input type="range" name="prazo" id="prazo" min='1' max='10' value="1">
-            <label id='preco'>R$ 0.00</label>
-            <button class="btn btn-orcamento" type="submit">Enviar</button>
-          </form>
-        </div>
-      </section> -->
-
       <footer>
         <div class="footer-content">
           <p>
             Copyright &copy; 2021 NILTON-ESCAME - Todos os direitos reservados
           </p>
-
-          <div class="social-list">
-            <ul>
-              <li><a href=''><i class="fab fa-facebook"></i></a></li>
-              <li><a href=''><i class="fab fa-instagram"></i></a></li>
-              <li><a href=''><i class="fab fa-twitter"></i></a></li>
-            </ul>
-          </div>
 
         </div>
       </footer>
